renamed file, modified script, changed path of EDA data and maps

--- a/Data_Analysis.Rmd
+++ b/Data_Analysis.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "EDA"
+title: "Data Analysis"
 output: pdf_document
 ---
 ```{r}
@@ -8,13 +8,12 @@ matrix.jul.temp  = NULL
 
 #### the following loop will generate the graphs 
 ##### and it will build two matrices to track the average temprtures of two months through out the 16 years. 
-for (k in 2001:2016) {
-  YEAR = k
+for (YEAR in 2001:2016) {
+  load(paste0("./eda_data/ave_temp_",YEAR,".Rdata"))
   
-  load(paste0("./cleaned_data/ave_temp_",YEAR,".Rdata"))
-  plot(EDA.year[,2], type = "l",  main = paste("Average Sea Tempreture in", YEAR, sep = " ") , xlab = "month", ylab =    "Temperature", col = "blue")
+  plot(EDA.year[,2], type = "l", main = paste("Average Sea Tempreture in", YEAR, sep = " ") , xlab = "month", ylab =    "Temperature", col = "blue")
   
-  plot(EDA.year[,3], type = "l",  main = paste("Average Air Tempreture in", YEAR, sep = " ") , xlab = "month", ylab =    "Temperature", col = "red")
+  plot(EDA.year[,3], type = "l", main = paste("Average Air Tempreture in", YEAR, sep = " ") , xlab = "month", ylab =    "Temperature", col = "red")
   
   jan.temp = EDA.year[1,2:3 ]
   jul.temp = EDA.year[7,2:3]
@@ -36,8 +35,6 @@ In this section, we create separate plots for each year both for the sea tempera
 *notice: The sharp points that indicate extremely cold temperatures indicate months that have missing data that the average temperature could not be calculated. 
 
 
-
-
 ```{r}
 
 ###### graphing the average tempruturs of JAN AND JUL across 16 years in a gragh. 
@@ -51,11 +48,3 @@ plot(matrix.jul.temp[,2], type = "l",  main = "Average Air Tempreture of July" ,
 plot(matrix.jul.temp[,1], type = "l",  main = "Average Sea Tempreture of July" , xlab = "Year", ylab = "Temperature", col = "blue")
 ```
 For the second set of plots we chose January and July, and got the average temperature for all of the years for these specific months. January and July were chosen so our plots could be better illustrator of the coldest and the warmest months of the year. Again here we observe patterns that show Air temperature has a smaller range than that of Sea. However, in the plots we don't see any patterned movement that indicates increase or decrease of temperature over these 16 years.
-
-
-
-```{r}
-
-
-
-```
